--- a/config/envoy/envoy.yaml
+++ b/config/envoy/envoy.yaml
@@ -34,8 +34,58 @@ static_resources:
                 filename: /etc/server.crt
               private_key:
                 filename: /etc/server.key
+  - address:
+      socket_address:
+        address: 0.0.0.0
+        port_value: 9902
+    filter_chains:
+    - filters:
+      - name: envoy.filters.network.http_connection_manager
+        typed_config:
+          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
+          stat_prefix: ingress_http
+          route_config:
+            name: local_route
+            virtual_hosts:
+            - name: backend
+              domains:
+              - "*"
+              routes:
+              - match:
+                  prefix: "/stats/prometheus"
+                route:
+                  cluster: envoy-stats
+          http_filters:
+          - name: envoy.filters.http.compressor
+            typed_config:
+              "@type": type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor
+              response_direction_config:
+                common_config:
+                  min_content_length: 100
+                  content_type:
+                  - text/plain
+                disable_on_etag_header: true
+              compressor_library:
+                name: text_optimized
+                typed_config:
+                  "@type": type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
+                  memory_level: 3
+                  window_bits: 10
+          - name: envoy.filters.http.router
 
   clusters:
+  - name: envoy-stats
+    connect_timeout: 0.25s
+    type: STATIC
+    load_assignment:
+      cluster_name: envoy-stats
+      endpoints:
+      - lb_endpoints:
+        - endpoint:
+            address:
+              socket_address:
+                address: 127.0.0.1
+                port_value: 9901
   - name: backend
     type: STRICT_DNS
     lb_policy: ROUND_ROBIN
@@ -48,3 +98,8 @@ static_resources:
               socket_address:
                 address: backend
                 port_value: 3000
+admin:
+  address:
+    socket_address:
+      address: 0.0.0.0
+      port_value: 9901
