--- a/config/prometheus/prometheus.yaml
+++ b/config/prometheus/prometheus.yaml
@@ -1,14 +1,23 @@
 global:
-  scrape_interval: 30s
-  scrape_timeout: 10s
+  scrape_interval: 5s
+  scrape_timeout: 2s
 
 rule_files:
-  - alert.yaml
+  - alerts.yaml
 
 scrape_configs:
-  - job_name: services
+  - job_name: echod
+    metrics_path: /metrics
+    static_configs:
+      - targets:
+          - 'backend:3000'
+  - job_name: envoy
+    metrics_path: /stats/prometheus
+    static_configs:
+      - targets:
+          - 'envoy:9901'
+  - job_name: prometheus
     metrics_path: /metrics
     static_configs:
       - targets:
           - 'prometheus:9090'
-          - 'echod:3000'
