--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,11 +6,14 @@ services:
       dockerfile: Dockerfile-envoy
     ports:
     - "10000:10000"
+    - "9901:9901"
   
   backend:
     build:
       context: .
       dockerfile: Dockerfile-app
+    ports:
+    - "3000:3000"
 
   prometheus:
     image: prom/prometheus:v2.30.3
